--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node ./node_modules/typeorm/cli -d ./src/ormconfig.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d ormconfig.ts",
     "migration:generate": "npm run typeorm migration:generate src/migrations/$npm_config_name",
     "db:drop": "npm run typeorm schema:drop",
     "db:migrate": "npm run typeorm migration:run"
@@ -29,6 +29,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
