--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run build && npm run typeorm migration:run",
     "migration:down": "npm run typeorm migration:revert",
-    "db:drop":"npm run typeorm schema:drop",
+    "db:drop": "npm run typeorm schema:drop",
     "seed": "npm run build && npx typeorm -d dist/db/seedDb.js migration:run"
   },
   "dependencies": {
@@ -31,7 +31,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
@@ -47,7 +47,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
